--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,12 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+    assets:
+        - assets/imgs/ground1.jpg
+        - assets/imgs/ground2.jpg
+        - assets/imgs/ground3.jpg
+        - assets/imgs/ground4.jpg
+        - assets/imgs/ground5.jpg
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
